# GarageCRM

./: .env.example  .gitignore  README.md  hostinger.env.example  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml  sign-uploaded-release.yml  web-build.yml
docs/: DVLA_LOOKUP.md  HOSTINGER.md  RELEASING.md  codex-build-notes.md
scripts/: create-github-update-assets.ps1  package-hostinger.ps1  prepare-release.mjs
src/: main.js  style.css
src-tauri/: Cargo.toml  build.rs  tauri.android.conf.json  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/admin/: AdminUi.ts
src/hooks/: useAdminAuth.ts
src/lib/: admin.ts  auth.ts  billing.ts  platform.js  supabase.ts  webBackend.js
src/pages/admin/: AdminDashboard.ts
src/services/: adminReferrals.ts  adminStats.ts
supabase/: config.toml  schema.sql
supabase/functions/_shared/: billing.ts
supabase/functions/billing-return/: index.ts
supabase/functions/create-billing-portal-session/: index.ts
supabase/functions/create-checkout-session/: index.ts
supabase/functions/dvla-vehicle-lookup/: index.ts
supabase/functions/send-sms/: index.ts
supabase/migrations/: 202605020001_billing_foundation.sql  202605060001_pricing_plans_update.sql  202605060002_paid_period_access.sql  202605060003_vrm_checks_by_plan.sql  202605060004_admin_accounts.sql  202606030001_admin_profiles_dashboard.sql  202606030002_referral_codes.sql  202606030003_fix_referral_code_aggregation.sql
(+4 files in other folders)
