[package]
name = "garage-crm"
version = "1.1.3"
description = "Garage CRM System"
authors = ["you"]
edition = "2021"

[lib]
name = "garage_crm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "garage-crm"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
url = "2"
tauri-plugin-deep-link = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
